docs/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-cert
  namespace: default
  annotations:
    kubernetes.io/description: "acme auto-cert"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-cert
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auto-cert
    spec:
      containers:
        - name: auto-cert
          image: "registry.cn-hangzhou.aliyuncs.com/startops/auto-cert:main_ac35c26"
          command:
            - /app/auto-cert-linux
            - -configPath=/app/configs/config.yaml
          imagePullPolicy: "IfNotPresent"
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 18080
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 18080
            timeoutSeconds: 10

          resources:
            limits:
              cpu: 100m
            requests:
              cpu: 500m

          securityContext: {}

          volumeMounts:
            - mountPath: /app/configs
              name: auto-cert-config

      imagePullSecrets:
        - name: startops

      restartPolicy: Always
      securityContext: {}
      volumes:
        - configMap:
            name: auto-cert-config
          name: auto-cert-config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: auto-cert
  name: auto-cert
  namespace: default
spec:
  ports:
    - name: tcp18080
      port: 18080
      protocol: TCP
      targetPort: 18080
  selector:
    app: auto-cert
  type: NodePort
  sessionAffinity: None
